# sdl3-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  plan.md  sdl3-gpu-render.md  sdl3-when-to-use.md  shadercross.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake.yml  requirements.txt
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  MandelCpu.cpp  MandelImage.cpp  MandelViewport.cpp  core.cpp
libs/core/include/core/: MandelCpu.h  MandelImage.h  MandelIterationBuffer.h  MandelParams.h  MandelViewport.h
libs/core/include/core/sdl/: GpuBuffer.h  GpuCommandBuffer.h  GpuComputePipeline.h  GpuDevice.h  GpuFence.h  GpuGraphicsPipeline.h  GpuHandle.h  GpuSampler.h  GpuShader.h  GpuSwapchainTexture.h  GpuTexture.h  GpuTransferBuffer.h  GpuWindowClaim.h  Library.h  Properties.h  Window.h  sdl.h
libs/core/sdl/: GpuBuffer.cpp  GpuCommandBuffer.cpp  GpuComputePass.cpp  GpuComputePipeline.cpp  GpuCopyPass.cpp  GpuDevice.cpp  GpuGraphicsPipeline.cpp  GpuRenderPass.cpp  GpuSampler.cpp  GpuShader.cpp  GpuSwapchainTexture.cpp  GpuTexture.cpp  GpuTransferBuffer.cpp  GpuWindowClaim.cpp  Library.cpp  Properties.cpp  Window.cpp  sdl.cpp
libs/sdlcpp/: CMakeLists.txt  GpuBuffer.cpp  GpuCommandBuffer.cpp  GpuComputePass.cpp  GpuComputePipeline.cpp  GpuCopyPass.cpp  GpuDevice.cpp  GpuGraphicsPipeline.cpp  GpuRenderPass.cpp  GpuSampler.cpp  GpuShader.cpp  GpuSwapchainTexture.cpp  GpuTexture.cpp  GpuTransferBuffer.cpp  GpuWindowClaim.cpp  Library.cpp  Properties.cpp  Window.cpp  sdl.cpp
libs/sdlcpp/include/sdlcpp/: Error.h  GpuBuffer.h  GpuCommandBuffer.h  GpuComputePass.h  GpuComputePipeline.h  GpuCopyPass.h  GpuDevice.h  GpuFence.h  GpuGraphicsPipeline.h  GpuHandle.h  GpuRenderPass.h  GpuSampler.h  GpuShader.h  GpuSwapchainTexture.h  GpuTexture.h  GpuTransferBuffer.h  GpuWindowClaim.h  Handle.h  Library.h  Properties.h  Window.h  sdl.h
libs/wxsdl/: CMakeLists.txt  SdlCanvas.cpp  SdlWindowAttach.h  SdlWindowAttachCocoa.cpp  SdlWindowAttachGtk3.cpp  SdlWindowAttachWin32.cpp
libs/wxsdl/include/wxsdl/: SdlCanvas.h
tests/: CMakeLists.txt
tests/test-core/: CMakeLists.txt  test.cpp  test_MandelCpu.cpp  test_MandelImage.cpp  test_MandelIterationBuffer.cpp  test_MandelPalette.cpp  test_MandelViewport.cpp
tests/test-dxc/: CMakeLists.txt  smoke.vert.hlsl
tests/test-sdlcpp/: CMakeLists.txt  test.cpp  test_GpuCommandBuffer.cpp  test_GpuComputePass.cpp  test_GpuCopyPass.cpp  test_GpuDevice.cpp  test_GpuRenderPass.cpp
tests/test-wxsdl/: CMakeLists.txt  test.cpp
tools/: CMakeLists.txt
tools/mandel/: CMakeLists.txt  MandelRenderHost.cpp  MandelRenderHost.h  assets.h.in  main.cpp
tools/mandel/assets/: blit.frag.hlsl  blit.vert.hlsl  height.frag.hlsl  height.vert.hlsl  mandel.comp.hlsl
vcpkg-overlay-ports/directx-dxc/: directx-dxc-config.cmake.in  fix-libcxx-no-specializations.patch  portfile.cmake  vcpkg.json
vcpkg-overlay-ports/sdl3-shadercross/: portfile.cmake  vcpkg.json
